tests/cases/should_fail/triple_colon_in_access_name/case.stderr
error: expected a name here
 --> $DIR/case.hash:1:7
1 |   a::b:::c<int>();
  |         ^ here
